[package]
name = "websocket_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
warp = "0.3.6"
futures-util = "0.3.28"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
log = "0.4.20"
log4rs = "1.2.0"
serde_yaml = "0.9.25"
itertools = "0.11.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
